--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,6 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-
 API_VERSION=v1
 FRONT_URL="http://localhost:3000"
 # Authorised area for cookies
@@ -16,7 +15,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=petshop
 DB_USERNAME=petshop_user
