--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,11 @@ services:
         ports:
             - 8081:80
         environment:
-            - PMA_ARBITRARY=1
+            PMA_HOST: mysql
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_ROOT_HOST: '%'
+            MYSQL_DATABASE: '${DB_DATABASE}'
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
         depends_on:
             - mysql
         networks:
